# soroban-crashlab

./: API_ERROR_REPORT_PR_DESCRIPTION.md  CONTRIBUTING.md  MAINTAINER_WAVE_PLAYBOOK.md  PR_DESCRIPTION.md  README.md  THREAT_MODEL_IMPLEMENTATION_SUMMARY.md  THREAT_MODEL_PR_DESCRIPTION.md
apps/web/: package-lock.json
apps/web/src/app/: add-accessible-keyboard-nav-blueprint-page-49.tsx  add-accessible-keyboard-nav-blueprint.test.ts  add-accessible-keyboard-nav-blueprint.tsx  add-heatmap-interactions.test.ts  add-heatmap-interactions.tsx  add-run-cluster-overview.test.ts  add-run-cluster-overview.tsx  add-run-timeline.tsx  api-error-report-page.test.ts  api-error-report-page.tsx  campaign-milestone-timeline-55.tsx  campaign-milestone-timeline-utils.test.ts  campaign-milestone-timeline-utils.ts  create-sanity-check-pipeline-page-page.tsx  integrate-database-migration-integration-tests.tsx  integrate-external-authentication-integration.tsx  integrate-integration-test-harness-for-ui-flows.tsx  integrate-replay-end-to-end-integration-test.tsx  page.integration.test.ts  page.tsx  security-policy.test.ts
contracts/crashlab-core/: Cargo.toml
contracts/crashlab-core/src/: auth_matrix.rs  bundle_persist.rs  env_fingerprint.rs  fixture_compat.rs  fixture_sanitize.rs  lib.rs  regression_grouping.rs  replay.rs  reproducer.rs  retention.rs  rpc_envelope.rs  run_control.rs  scenario_export.rs  stale_detector.rs  taxonomy.rs  threat_model_tests.rs
docs/: REPRODUCIBILITY.md  THREAT_MODEL_ARTIFACT_HANDLING.md
ops/: wave3-backlog.md  wave3-issues.tsv
