[package]
name = "crashlab-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "export-corpus"
path = "src/bin/export-corpus.rs"

[[bin]]
name = "import-corpus"
path = "src/bin/import-corpus.rs"
